@@ -1,3 +1,6 @@
+Mar 29, 2022
+  tuned up logging
+
 Mar 09, 2022
   updated dependencies to avoid some vulnerabilities
 
